# qt-cli-client-server-app

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/app/include/: BinFileWriter.h  TcpClient.h
client/app/include/interfaces/: IWriter.h
client/app/src/: BinFileWriter.cpp  TcpClient.cpp
server/: CMakeLists.txt  main.cpp
server/app/include/: SinGenerator.h  TcpServer.h
server/app/include/interfaces/: IDataGenerator.h
server/app/src/: SinGenerator.cpp  TcpServer.cpp
